syntax = "proto3";

option csharp_namespace = "Optima.Domain.Ownership";

import public "google/protobuf/empty.proto";
import public "google/protobuf/timestamp.proto";

import public "core.proto";
import public "security.proto";
import public "dataset.proto";

package ownership;

message DatasetOwner {
  dataset.DatasetId         dataset     = 1;
  security.Principal        owner       = 2;
  google.protobuf.Timestamp assignedAt  = 3;
  google.protobuf.Timestamp withdrawnAt = 4;
}

message DatasetOwnerHistory {
  repeated DatasetOwner history = 1;
}

message OwnerAuthorizationRequest {
  core.UUID                           id            = 1;
  dataset.DatasetId                   datasetId     = 2;
  security.Principal                  requestedFor  = 3;
  security.User                       requestedBy   = 4;
  google.protobuf.Timestamp           requestedAt   = 5;
  string                              justification = 6;
  repeated security.PrincipalApproval approvals     = 7;
  bool                                isResponded   = 8; 
}

message OwnerAuthorizationResponse {
  message Approved {
    google.protobuf.Timestamp   submittedAt = 1;
    string                      comment     = 2;
  }
  message Rejected {
    google.protobuf.Timestamp   submittedAt = 1;
    string                      reason      = 4;
  }

  OwnerAuthorizationRequest request = 1;

  oneof state {
    Approved approved = 11;
    Rejected rejected = 12;
  }
}