syntax = "proto3";

option csharp_namespace = "Generated";

import public "lin.proto";
import public "google/protobuf/empty.proto";

package lin.generated.test1;

message Row {
    string Date = 1;
    string Open = 2;
    string High = 3;
    string Low = 4;
    string Close = 5;
    string Volume = 6;
    string AdjClose = 7;
    string Flag = 8;
}

service DatasetSource {
    rpc Data (lin.DatasetDataRequest) returns (stream RowWithLineage);

//    rpc Metadata (google.protobuf.Empty) returns (lin.DatasetLineage);
}

service DatasetSink {
    rpc Data (stream RowWithLineage) returns (google.protobuf.Empty);
}


message RowWithLineage {
    uint64          rowNum      = 1;
    Row             row         = 2;
    lin.RowLineage  rowLineage  = 3;
}
